# sutantra

./: .gitignore  DIFFERENTIATED_UI_SUCCESS.md  FIXED_UI_ISSUE.md  GITIGNORE_SUCCESS_SUMMARY.md  NEXT_PHASE_ROADMAP.md  PHASE_2_PROGRESS_REPORT.md  PRODUCTION_STREAMING_SUCCESS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REAL_WEBRTC_PACKET_DEMO_SUCCESS.md  REAL_WEBRTC_SUCCESS_REPORT.md  STREAM_FIXES_COMPLETE.md  STREAM_REFRESH_FIX.md  UI_DIFFERENTIATION_SOLUTION.md  UI_FIXES_COMPLETE.md  WEBSOCKET_FIXED_SUCCESS.md  WEB_UI_ACCESS_SUCCESS.md  WEB_UI_VISUAL_GUIDE.md  debug_ui_test.html  debug_websocket.html  package-lock.json  package.json  playwright.config.js  test_browser_access.html  test_cross_node_discovery.html  test_stream_api.sh  test_stream_discovery.html  test_stream_refresh.html  test_ui_simple.html  test_video_streaming.html  test_viewer_discovery.html  test_websocket.html  test_websocket_final.html  test_websocket_python.py  test_websocket_stream.js  test_websocket_viewer.js
prototype/sutantra-node/: Cargo.toml  demo_packet_transmission.sh  demo_real_webrtc_streaming.sh  demo_simple_web_ui.sh  demo_two_node_streaming.sh  demo_two_nodes.sh  demo_web_ui.sh
prototype/sutantra-node/src/: main.rs  web_simple.rs
prototype/sutantra-node/src/blockchain/: consensus.rs  engine.rs  mod.rs  state.rs  transactions.rs
prototype/sutantra-node/src/integration/: events.rs  mod.rs  node.rs
prototype/sutantra-node/src/mobile/: mod.rs
prototype/sutantra-node/src/streaming/: discovery.rs  engine.rs  mod.rs  real_webrtc.rs  real_webrtc_fixed.rs  real_webrtc_placeholder.rs  (+2 more)
(+18 files in other folders)
