[package]
name = "sutantra-node"
version = "0.1.0"
edition = "2021"
description = "Integrated Layer 1 Streaming Blockchain Node"
authors = ["Sutantra Team"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Networking and P2P
libp2p = { version = "0.53", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "kad", "identify", "ping"] }

# WebRTC for streaming - real implementation
webrtc = "0.7"
webrtc-util = "0.7" 
webrtc-ice = "0.9"
webrtc-dtls = "0.7"
webrtc-data = "0.6"
webrtc-media = "0.5"
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
blake3 = "1.5"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"

# Database - simplified for demo
# rocksdb = "0.21"

# Logging and utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"

# Time and metrics
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "sutantra-node"
path = "src/main.rs"